[package]
name = "screen_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
app = { path = "../app" }
clerk = "0.4" # lcd_screen
gpio-cdev = "0.4" # lcd_screen
log = "0.4"
pnet = "0.28.0"
rradio-messages = { path = "../../internet-radio-rs/messages" }
serde = { version = "1.0", features = ["derive", "rc"] }
smol = "1.2"
toml = "0.5"
